# napari-nexus-reader

./: README.md  setup.cfg  setup.py
src/napari_nexus_reader/: __init__.py  _version.py  nexus_reader.py
tests/: test_mrcfile_reader.py
