[metadata]
name = napari-nexus-plugin
version = 0.1.0

description = A napari plugin to read images in nexus formatted HDF5 files
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/jmp1985/napari-nexus-reader

project_urls =
    Source=https://github.com/jmp1985/napari-nexus-reader
    Tracker=https://github.com/jmp1985/napari-nexus-reader/issues

author = James Parkhurst

author_email = james.parkhurst@diamond.ac.uk

license = BSD license

license_file = LICENSE

keywords = 
    exception
    HAL-9000

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Utilities
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

platforms = 
    unix
    linux
    osx
    cygwin
    win32

[aliases]
test=pytest

[tool:pytest]
addopts = --cov=src/napari_nexus_reader --doctest-modules
